# perfetto-sdk-rs

./: Cargo.toml  README.md
perfetto-writer/: Cargo.toml
perfetto-writer/src/: lib.rs
perfetto-writer/tests/golden/: counter_track.txtpb  debug_annotations.txtpb  simple_event.txtpb
scripts/: test_workloads.py
tracing-perfetto-example/: Cargo.toml  README.md
tracing-perfetto-example/src/: async_tasks.rs  basic.rs
tracing-perfetto-writer/: Cargo.toml
tracing-perfetto-writer/src/: lib.rs
