[package]
name = "tracing-perfetto-example"
version = "0.3.2"
edition = "2021"

[[bin]]
name = "basic"
path = "src/basic.rs"

[[bin]]
name = "async_tasks"
path = "src/async_tasks.rs"

[dependencies]
tracing-perfetto-writer = { path = "../tracing-perfetto-writer" , version="0.3.2"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "std"] }
tokio = { version = "1", features = ["full"] }
