[package]
name = "tracing-perfetto-writer"
version = "0.1.0"
edition = "2024"

[dependencies]
perfetto-writer = { path = "../perfetto-writer" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "std"] }
rand = "0.9.2"
dashmap = "6.1.0"

[dev-dependencies]
bytes = "1.10.1"
